# user_auth2-Docker-FastAPI-Poetry-

./: compose.yaml  readme.md
user1_service/: .env  Dockerfile.dev  pyproject.toml
user1_service/app/: auth.py  db.py  main.py  models.py  settings.py
user1_service/app/router/: user.py
