[tool.poetry]
name = "product-service"
version = "0.1.0"
description = ""
authors = ["Afsheen Shafiq <fsheekhi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlmodel = "^0.0.20"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pytest = "^8.2.2"
httpx = "^0.27.0"
aiokafka = "^0.11.0"
protobuf = "^5.27.2"
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
